Revision history for Dancer2-Plugin-Auth-HTTP-Basic-DWIW

0.09    2023-10-22
        - fix for Dancer2 1.0.0: header keyword deprecated, replaced by response_header (thanks ANDK!)

0.0801  2020-09-30
        - add repository URL to metacpan sidebar (thanks github @chorny!)

0.08    2020-08-07
        - first first argument to route sub from Dancer2::Core::DSL
          to Dancer2::Core::App - thanks github @m-doughty!

0.07    2019-11-05
        - log error when check_login handler fails

0.06    2019-02-19
        - new way to configure handlers, look out for deprecation warnings!
        - allow returning custom content on authentication failure (HTTP 401)

0.05    2017-04-17
        - fix passwords containing a colon (thanks Sascha Rudolph!)
        - do not output error code as response body (fixes applications with serializer enabled)

0.04    2016-04-23
        - patch for Dancer2 plugin api changes
        - fixed duplicate sections in pod
        - minor code formatting

0.03    2015-05-12
        - Fixed problems on Perl versions prior to 5.14
        - Migrated from Convert::Base64 to MIME::Base64, which
          is included in perl by default.
        - Migrated to Dist::Zilla

0.0202  2015-05-07
        - Missing Build requirement: Convert::Base64
         
0.0201  2015-05-06
        - Fixed the version number in POD.

0.02    2015-05-06
        - Made the error handling nicer and more robust

0.01    2015-05-02
        - First version, released on an unsuspecting world.
